# skillmeat

./: .coveragerc  .dockerignore  .env.enterprise.example  .env.example  .env.local-auth.example  .env.local.example  .gitignore  API-RESPONSE-MAPPING-AUDIT.md  BUNDLE_IMPLEMENTATION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODEBASE_EXPLORATION_REPORT.md  COLLECTION_AND_MANAGE_PAGES_ANALYSIS.md  DIS-5.8-COMPLETION-SUMMARY.md  Dockerfile  EXPLORATION_INDEX.md  EXPLORATION_SUMMARY.md  FEATURE_DOCS_README.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_P0-004.md  LICENSE  MAPPING-CONSOLIDATION-SUMMARY.md  MAPPING-LOCATIONS-REFERENCE.md  MARKETPLACE_PATH_INVESTIGATION.md  Makefile  OBSERVABILITY_IMPLEMENTATION_COMPLETE.md  P4-005-IMPLEMENTATION-SUMMARY.md  P5-004-SECURITY-REVIEW-COMPLETE.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_INDEX.md  PERFORMANCE_SUMMARY.md  PHASE3_P0-002_AUTH_IMPLEMENTATION.md  PHASE_5_TASK_3_SUMMARY.md  QUICK_REFERENCE_COMPONENTS.md  README.md  SMOKE_TEST_REPORT_SID-035.md  TAG_PATTERNS_ANALYSIS.md  VAULT_IMPLEMENTATION.md  benchmark.db-shm  benchmark.db-wal  (+13 more)
.benchmarks/Darwin-CPython-3.12-64bit/: 0001_955ab929df7b96c44340f5729377c01436a03d7b_20251205_021022_uncommited-changes.json
.claude/: .skillmeat-deployed.toml  .skillmeat-project.toml  README.md  install.sh  settings.json
.claude/adrs/: filtering-implementation.md  metadata-storage-strategy.md
.claude/analysis/: ANALYSIS-SUMMARY.md  CONTENT-VIEWER-README.md  QUICK-REFERENCE.txt  README.md  artifact-detection-system.md  content-viewer-extraction-report.md  content-viewer-quick-ref.md  content-viewing-extraction-inventory.md  detection-code-reference.md
.claude/commands/: mc.md  plan-feature.md
.claude/config/: README.md  multi-model.toml  subagents.json
.claude/context/: EXPLORATION_SUMMARY.md  QUICK_REFERENCE.md  api-endpoint-mapping.md  artifact-detection-code-patterns.md  artifact-detection-standards.md  collection-architecture.md  collection-patterns.md  collection-performance-fixes.md  collection-performance-issues.md  collection-quick-reference.md  detection-patterns-summary-table.md  (+22 more)
.codex/: config.toml
Formula/: skillmeat.rb
ai/: symbols-api-cores.json  symbols-api-repositorys.json  symbols-api-routers.json  symbols-api-schemas.json  symbols-api-services.json  symbols-api.backup.json  symbols-web.json
bash/: claudectl-completion.bash
claude-export/: CLAUDE.md  INSTALL.md  install.sh  settings.json  settings.local.json
demo/: BACKSTAGE_INTEGRATION.md  README.md  backstage-app-config.yaml  dockerfile  init-db.sql  seed-composite.py
docker/: grafana-dashboard.json  grafana-dashboards.yml  grafana-datasources.yml  loki-config.yml  prometheus.yml  promtail-config.yml
docs/: DEMO_GUIDE.md  IMPLEMENTATION_SUMMARY.md  claudectl-examples.sh  claudectl-guide.md  commands.md  examples.md  feature-flags.md  migration.md  quickstart.md  template-deployment-optimization.md  web_commands.md
examples/: api_watcher_integration.py  cache_demo.py  cache_watcher_usage.py  context_booster_demo.py  observability_example.py  score_decay_demo.py  semantic_scoring_demo.py
fish/: claudectl.fish
man/: claudectl.1
monitoring/: README.md
scripts/: analyze_beta_feedback.py  backfill_tools_json.py  fix-misplaced-artifacts.py  generate-sdk.sh  link_orphan_artifacts.py  migrate_deployments_version_lineage.py  migrate_to_deployment_profiles.py  migrate_to_deployment_profiles_dryrun.md  parse_test_failures.py  repair_origin_source.py  run_all_tests.sh  run_enterprise_tests.sh  seed_demo_composite.py  send_beta_invitations.py  setup_agent_platform_links.sh
skillman/: cli.py
skillmeat/: __init__.py  cli.py  config.py  defaults.py  exit_codes.py  models.py  wrapper.py
tests/: TEST_SUMMARY_TAGS.md  TEST_SUMMARY_TASK_1_5.md  conftest.py  demo_diff_engine.py  demo_merge_engine.py  demo_three_way_diff.py  test_api_colors.py  test_api_deployment_profiles.py  test_api_similar.py  test_associations_api.py  test_bundle_export_composite.py  test_cache.py  test_cache_deployment_profile_repository.py  test_cache_marketplace.py  test_cache_recovery.py  test_cache_repository.py  test_cache_version_utils.py  test_cache_watcher.py  test_cache_watcher_profiles.py  test_claude_only_regression.py  test_claudectl_workflows.py  test_cli_alias.py  test_cli_analytics.py  test_cli_artifact_sync.py  test_cli_auth_integration.py  test_cli_composites.py  test_cli_core.py  test_cli_diff.py  test_cli_init_profile.py  test_cli_marketplace_integration.py  test_cli_match.py  test_cli_memory_commands.py  test_cli_search.py  test_cli_similar.py  test_cli_zero_auth.py  test_collection_metadata.py  test_composite_detection.py  test_composite_memberships.py  test_composites_api.py  test_concurrent_access.py  (+76 more)
zsh/: _claudectl
(+4118 files in other folders)
