[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skillmeat"
version = "0.1.0-alpha"
description = "Personal collection manager for Claude Code artifacts (Skills, Commands, Agents, MCP, Hooks)"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "SkillMeat Contributors"}
]
keywords = [
    "claude",
    "skills",
    "commands",
    "agents",
    "cli",
    "collection-manager",
    "github",
    "ai",
    "artifacts"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0.0",
    "rich>=13.0.0",
    "GitPython>=3.1.0",
    "tomli>=1.2.0;python_version<'3.11'",
    "tomli_w>=1.0.0",
    "requests>=2.25.0",
    "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/miethe/skillmeat"
Documentation = "https://github.com/miethe/skillmeat#readme"
Repository = "https://github.com/miethe/skillmeat.git"
Issues = "https://github.com/miethe/skillmeat/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
skillmeat = "skillmeat.cli:main"

[tool.setuptools]
packages = [
    "skillmeat",
    "skillmeat.core",
    "skillmeat.sources",
    "skillmeat.storage",
    "skillmeat.utils"
]

[tool.setuptools.package-data]
skillmeat = ["py.typed"]
